syntax = "proto3";

package ic_sns_root.pb.v1;

import "ic_base_types/pb/v1/types.proto";

// All essential state of an SNS root canister.
//
// When canister_init is called in the SNS root canister, it is expected that a
// serialized version of this was passed via ic_ic00_types::InstallCodeArgs::args,
// which can be retrieved by the canister via dfn_core::api::arg_data().
message SnsRootCanister {
  // Required.
  //
  // The SNS root canister is supposed to be able to control this canister.  The
  // governance canister sends the SNS root canister change_governance_canister
  // update method calls (and possibly other things).
  ic_base_types.pb.v1.PrincipalId governance_canister_id = 1;

  // The SNS Ledger canister ID
  ic_base_types.pb.v1.PrincipalId ledger_canister_id = 2;
}
